# vector-map

./: Cargo.toml  LICENSE_MIT  Makefile  README.md  index.html  index.js  package-lock.json
map-preparer/: Cargo.toml  Makefile  build.rs  results.csv  todo.md
map-preparer/src/: heatmap.rs  instrumented_reader.rs  lib.rs  main.rs  osm_stream.rs  partially_compressed.rs  potentially_compressed.rs  protobuf_helpers.rs
src/: drawing.rs  geometry.rs  lib.rs  utils.rs
webapp/: Cargo.toml  index.html  index.js
webapp/src/: utils.rs
