[package]
name = "map-preparer"
edition = "2021"

[[bin]]
name = "map-preparer"
path = "src/main.rs"

[[bin]]
name = "heatmap"
path = "src/heatmap.rs"

[dependencies]
bytes = "1.10.1"
prost = "0.13"
flate2 = "1.1"
plotters = "0.3.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.51", features = ["derive"] }
rayon = "1.10"

[build-dependencies]
prost-build = "0.13.5"
